2024-03-01T08:18:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8108467372 # 163
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-01
* notice: last 14d: unq all: 2 4143
* notice: prev accum: outdated-unq outdated-all / unq all: 1956 192426 / 1980 196623
* notice: next accum: outdated-unq outdated-all / unq all: 1956 192426 / 1982 196735
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -91 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2024-02-16 2024-03-01]

2024-03-01T01:10:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8104956019 # 162
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-01
* notice: last 14d: unq all: 2 4122
* notice: prev accum: outdated-unq outdated-all / unq all: 1955 192127 / 1980 196528
* notice: next accum: outdated-unq outdated-all / unq all: 1956 192426 / 1980 196623
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -0 -75 / +2 +300 -0 -0 / 2 300
* notice: removed / changed dates: [2024-02-15] / [2024-02-16 2024-02-29]

2024-02-29T16:17:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8099169790 # 161
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-29
* notice: last 14d: unq all: 2 4142
* notice: prev accum: outdated-unq outdated-all / unq all: 1955 192127 / 1980 196435
* notice: next accum: outdated-unq outdated-all / unq all: 1955 192127 / 1980 196528
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -93 / +2 +205 -0 -0 / 2 205
* notice: removed / changed dates: [] / [2024-02-15 2024-02-29]

2024-02-29T08:17:41Z: